--- a/app/public/css/show.css
+++ b/app/public/css/show.css
@@ -44,7 +44,7 @@
 .sub-title {
     font-size: 16px; 
     font-weight: bold;
-    padding: 20px 0 10px 0;
+    padding: 10px 0;
 }
 .sub-dict {
     display: grid;
