added a service for parsing package.json

--- a/app/public/css/show.css
+++ b/app/public/css/show.css
@@ -87,6 +87,7 @@
     color: #797979;
     display: block;
     padding-bottom: 10px;
+    max-width: 400px;
 }
 .version-detail {
     display: grid;
