--- a/app/public/css/search.css
+++ b/app/public/css/search.css
@@ -1,7 +1,7 @@
 .search {
     position: fixed;
-    width: 320px;
-    height: 50px;
+    width: 360px;
+    height: 40px;
     right: 20px;
     top: 20px;
     box-shadow: 1px 1px 7px 1px #ccccccd6;
@@ -13,17 +13,15 @@
 .search-input {
     width: 250px;
     height: 100%;
-    line-height: 60px;
-    display: inline-block;
+    line-height: 30px;
     font-size: 20px;
     color: #000;
     background-color: #fff;
     outline: none;
     border: 1px sold #ccccccd6;
-    padding: 0 10px 0 10px;
+    padding: 5px 10px;
 }
 .button-search {
-    display: inline-block;
     width: 55px;
     border: none;
     font-size: 15px;
