--- a/app/public/css/show.css
+++ b/app/public/css/show.css
@@ -126,3 +126,25 @@
     border-radius: 4px;
     align-self: center;
 }
+.icon {
+    font-size: 20px;
+    color: #000;
+    align-self: center;
+    margin-left: 15px;
+    cursor: pointer;
+}
+.icon:hover {
+    color: #1890ff;
+}
+.button-list {
+    position: fixed;
+    width: 80px;
+    height: 30px;
+    right: 20px;
+    top: 20px;
+    box-shadow: 1px 1px 7px 1px #ccccccd6;
+    border-radius: 4px;
+    padding: 10px;
+    background-color: #fff;
+    z-index: 10;
+}
